refactor: sonarLint 이용한 코드 스멜 제거